# wifi-file-transfer

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
app/: package-lock.json  package.json  vite.config.ts
app/src/: App.css  App.tsx
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/resources/webapp/: .gitignore
app/src-tauri/src/: lib.rs
app/src-tauri/src/api/: server.rs
app/src-tauri/src/api/routes/: routes.rs
app/src-tauri/src/constants/: constants.rs
app/src-tauri/src/fs/: fs.rs
app/src-tauri/src/http/: routes.rs  server.rs
app/src-tauri/src/state/: app_state.rs  state.rs
app/src-tauri/src/utils/: mod.rs  os.rs  resource.rs
app/src/config/: Config.ts  ConfigManager.ts
app/src/constants/: app.ts
app/src/pages/: Config.tsx  Configuration.tsx  Main.tsx
app/src/state/: appState.ts
app/src/utils/: blockDevTools.ts  server.ts  utils.ts  window.ts
app/web-ui/: .gitignore  package-lock.json  package.json  vite.config.ts
app/web-ui/src/: App.tsx
app/web-ui/src/types/: fs.ts
app/web-ui/src/utils/: BrowserHistory.ts
app/web-ui/webapp/: index.html
script/: cleanAll.js  constants.js  devAll.js  install.js
scripts/: build.js  constants.js  dev.js  install.js  process.js
scripts/clean/: cleanDist.js  cleanNode.js  cleanRust.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/fs/: fs.rs
src-tauri/src/http/: server.rs
src/utils/: server.ts
