[package]
name = "wifi-file-transfer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wifi_file_transfer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tokio-util = { version = "0.7.17", features = ["io"] }
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
local-ip-address = "0.6.5"
axum = "0.8.6"
tokio = "1.48.0"
once_cell = "1.21.3"
axum-range = "1.0.0"
axum-extra = { version = "0.12.2", features = ["typed-header"] }
tower-http = { version = "0.6.6", features = ["fs"] }
axum-reverse-proxy = "1.0.3"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 0
incremental = true
lto = "thin"

[profile.dev.package."*"]
opt-level = 1
debug = false
